fix label not showing issue when content too long in safari

--- a/src/components/Notebook.css
+++ b/src/components/Notebook.css
@@ -19,6 +19,7 @@
     margin-top: 4em;
     display: flex;
     width: 85vw;
+    height: 100%;
 }
 
 .notebook-container {
@@ -26,6 +27,7 @@
     padding: 2em;
     border-radius: 2em;
     height: 100%;
+    /* flex-basis: auto; */
     flex-grow: 1;
     width: 80vw;
     z-index: 1;
@@ -102,7 +104,7 @@
         width: 90%;
         display: flex;
         flex-flow: row wrap;
-        height: auto;
+        min-height: 3em;
     }
 
     .notebook-labels button {
